<resources>

    <string name="default_web_client_id">381460632315-nnn0o9cap2u3cb0ngdnksair8ongr688.apps.googleusercontent.com</string>

    <!--main menu-->
    <string name="app_name">App Compra y Venta</string>
    <string name="Item_Inicio">Inicio</string>
    <string name="Item_Chats">Chats</string>
    <string name="Item_vender">Vender</string>
    <string name="Item_Mis_Anuncios">Mis Anuncios</string>
    <string name="Item_Cuenta">Cuenta</string>

    <string name="TituloRL">Titulo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Ingresar_email">Ingresar con email</string>
    <string name="Ingresar_google">Ingresar con Google</string>

    <!-- login -->
    <string name="Txt_login">Login de usuario</string>
    <string name="Et_email">Email</string>
    <string name="Et_password">Contraseña</string>
    <string name="Btn_ingresar">Ingresar</string>
    <string name="Txt_no_cuenta">¿No tienes una cuenta?</string>
    <string name="Txt_registrarme">Registrarme</string>

    <!-- registro -->
    <string name="Txt_registro">Registro de usuario</string>
    <string name="Et_r_password">Repetir contraseña</string>
    <string name="Btn_registrar">Registrarme</string>

    <!-- cerrar sesion -->
    <string name="Btn_cerrar_sesion">Cerrar sesión</string>

    <!-- fragment cuenta -->
    <string name="Txt_perfil">PERFIL</string>
    <string name="Txt_informacion">Información de usuario</string>
    <string name="Txt_nombres">Nombre </string>
    <string name="Tv_nombres">Nombre completo </string>
    <string name="Txt_email">Correo electronico</string>
    <string name="Tv_email">mail@gmail.com</string>
    <string name="Txt_nacimiento">Fecha de nacimiento </string>
    <string name="Tv_nacimiento">DD/MM/AAAA </string>
    <string name="Txt_miembro">Miembro desde </string>
    <string name="Tv_miembro">DD/MM/AAAA </string>
    <string name="Txt_telefono">Teléfono </string>
    <string name="Tv_telefono">8125835831 </string>
    <string name="Txt_estado_cuenta">Estado </string>
    <string name="Tv_estado_cuenta">No verificado </string>

    <string name="Btn_editar_perfil">Editar perfil</string>

    <!-- EditarPerfil.kt -->
    <string name="Txt_editar_perfil">Editar perfil</string>
    <string name="Et_nombres">Nombre</string>
    <string name="Et_f_nac">Fecha de nacimiento</string>
    <string name="Cod_tef">+00</string>
    <string name="Et_telefono">Telefono</string>
    <string name="Btn_actualizar">Actualizar</string>


    <!-- Crear anuncio -->
    <string name="Et_marca">Marca</string>
    <string name="Categoria">Categoría</string>
    <string name="Condicion">Condición</string>
    <string name="Locacion">Locación</string>
    <string name="Et_precio">Precio</string>
    <string name="Et_titulo">Título</string>
    <string name="Et_descripcion">Descripción</string>
    <string name="Btn_crear_anuncio">Crear anuncio</string>

</resources>