<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragmentos.FragmentCuenta"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/Txt_perfil"
            android:text="@string/Txt_perfil"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/Tv_perfil"
            android:layout_below="@+id/Txt_perfil"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/img_perfil"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/Txt_informacion"
            android:text="@string/Txt_informacion"
            android:layout_below="@id/Tv_perfil"
            android:layout_marginTop="10dp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- nombre usuario -->

        <TextView
            android:id="@+id/Txt_nombres"
            android:text="@string/Txt_nombres"
            android:textStyle="bold"
            android:layout_below="@+id/Txt_informacion"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/Tv_nombres"
            android:text="@string/Tv_nombres"
            android:layout_below="@+id/Txt_informacion"
            android:layout_marginTop="15dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!-- email -->

        <TextView
            android:id="@+id/Txt_email"
            android:text="@string/Txt_email"
            android:textStyle="bold"
            android:layout_below="@+id/Txt_nombres"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/Tv_email"
            android:text="@string/Tv_email"
            android:layout_below="@+id/Txt_nombres"
            android:layout_marginTop="15dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!-- fecha nac -->
        <TextView
            android:id="@+id/Txt_nacimiento"
            android:text="@string/Txt_nacimiento"
            android:textStyle="bold"
            android:layout_below="@+id/Txt_email"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/Tv_nacimiento"
            android:text="@string/Tv_nacimiento"
            android:layout_below="@+id/Txt_email"
            android:layout_marginTop="15dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!-- miembro desde -->

        <TextView
            android:id="@+id/Txt_miembro"
            android:text="@string/Txt_miembro"
            android:textStyle="bold"
            android:layout_below="@+id/Txt_nacimiento"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/Tv_miembro"
            android:text="@string/Tv_miembro"
            android:layout_below="@+id/Txt_nacimiento"
            android:layout_marginTop="15dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!-- telefono -->

        <TextView
            android:id="@+id/Txt_telefono"
            android:text="@string/Txt_telefono"
            android:textStyle="bold"
            android:layout_below="@+id/Txt_miembro"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/Tv_telefono"
            android:text="@string/Tv_telefono"
            android:layout_below="@+id/Txt_miembro"
            android:layout_marginTop="15dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!-- edo de cuenta -->

        <TextView
            android:id="@+id/Txt_estado_cuenta"
            android:text="@string/Txt_estado_cuenta"
            android:textStyle="bold"
            android:layout_below="@+id/Txt_telefono"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/Tv_estado_cuenta"
            android:text="@string/Tv_estado_cuenta"
            android:layout_below="@+id/Txt_telefono"
            android:layout_marginTop="15dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <!-- btn editar perfil -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/Btn_editar_perfil"
            android:text="@string/Btn_editar_perfil"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_centerInParent="true"
            android:layout_width="200dp"
            android:layout_height="@dimen/m_button_height"
            android:layout_below="@id/Txt_estado_cuenta"
            android:layout_marginTop="50dp"
            app:icon = "@drawable/ic_editar"/>

        <!-- btn cerrar sesion -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/Btn_cerrar_sesion"
            android:text="@string/Btn_cerrar_sesion"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_centerInParent="true"
            android:layout_width="200dp"
            android:layout_height="@dimen/m_button_height"
            android:layout_below="@id/Btn_editar_perfil"
            app:icon="@drawable/ic_salir"/>






    </RelativeLayout>

</ScrollView>